Made distinct mock class

--- a/Test/Dangl.Test.Common/Dangl.Test.Common.csproj
+++ b/Test/Dangl.Test.Common/Dangl.Test.Common.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockClass.cs" />
     <Compile Include="TestBindableBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestTrulyObservableCollection.cs" />
