--- a/Test/Dangl.Test.Common/Dangl.Test.Common.csproj
+++ b/Test/Dangl.Test.Common/Dangl.Test.Common.csproj
@@ -51,9 +51,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="MockClass.cs" />
-    <Compile Include="TestBindableBase.cs" />
+    <Compile Include="BindableBase_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestTrulyObservableCollection.cs" />
+    <Compile Include="TrulyObservableCollection_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Dangl.Common.csproj">
