Fixed instantiation from IEnumerable for TrulyObservableCollection not hooking to the passed objects and added a test for it

--- a/Test/Dangl.Test.Common/Dangl.Test.Common.csproj
+++ b/Test/Dangl.Test.Common/Dangl.Test.Common.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="KellermanSoftware.Compare-NET-Objects, Version=3.2.0.0, Culture=neutral, PublicKeyToken=d970ace04cc85217, processorArchitecture=MSIL">
+      <HintPath>..\..\..\Dangl.GAEB\Dangl.AVA_Project_Test_Suite\packages\CompareNETObjects.3.02.0.0\lib\net45\KellermanSoftware.Compare-NET-Objects.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Comparator.cs" />
     <Compile Include="MockClass.cs" />
     <Compile Include="BindableBase_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -60,6 +65,9 @@
       <Project>{e419ac66-a5a6-4fa2-a632-a642fcf8bacf}</Project>
       <Name>Dangl.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
