--- a/Dangl.Common.csproj
+++ b/Dangl.Common.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="BindableBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringEncryption.cs" />
     <Compile Include="StringExtensionMethods.cs" />
     <Compile Include="TrulyObservableCollection.cs" />
   </ItemGroup>
