--- a/Dangl.Common.Tests/packages.config
+++ b/Dangl.Common.Tests/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="CompareNETObjects" version="3.03.0.0" targetFramework="net46" />
   <package id="xunit" version="2.2.0-beta1-build3239" targetFramework="net46" />
@@ -8,6 +7,6 @@
   <package id="xunit.core" version="2.2.0-beta1-build3239" targetFramework="net46" />
   <package id="xunit.extensibility.core" version="2.2.0-beta1-build3239" targetFramework="net46" />
   <package id="xunit.extensibility.execution" version="2.2.0-beta1-build3239" targetFramework="net46" />
-  <package id="xunit.runner.visualstudio" version="2.2.0-beta1-build1144" targetFramework="net46"
-           developmentDependency="true" />
+  <package id="xunit.runner.console" version="2.2.0-beta1-build3239" targetFramework="net46" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.2.0-beta1-build1144" targetFramework="net46" developmentDependency="true" />
 </packages>
