--- a/Dangl.Common.Tests/packages.config
+++ b/Dangl.Common.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CompareNETObjects" version="3.03.0.0" targetFramework="net46" />
+  <package id="OpenCoverToCoberturaConverter" version="0.2.4.0" targetFramework="net46" />
   <package id="xunit" version="2.2.0-beta1-build3239" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.2.0-beta1-build3239" targetFramework="net46" />
