--- a/Dangl.Common.nuspec
+++ b/Dangl.Common.nuspec
@@ -12,4 +12,7 @@
     <description>$description$</description>
     <copyright>Copyright 2016 Georg Dangl</copyright>
   </metadata>
+  <files>
+    <file src="bin\Release\Dangl.Common.xml" />
+  </files>
 </package>
