--- a/src/Dangl.Common/project.json
+++ b/src/Dangl.Common/project.json
@@ -4,10 +4,11 @@
   "description": "Common functionality",
   "title": "Dangl.Common",
   "packOptions": {
-    "projectUrl": "https://git.dan.gl/Repository/Dangl.Common",
-    "owners": [ "Georg Dangl" ]
+    "projectUrl": "https://github.com/GeorgDangl/Dangl.Common",
+    "owners": [ "Georg Dangl" ],
+    "releaseNotes": "1.3.0: Change StringEncryption to work with any passwords. Not backwards compatible to earlier versions."
   },
-  "version": "1.2.0",
+  "version": "1.3.0",
   "frameworks": {
     "netcoreapp1.0": {
       "imports": [
