--- a/src/Dangl.Common/project.json
+++ b/src/Dangl.Common/project.json
@@ -6,9 +6,9 @@
   "packOptions": {
     "projectUrl": "https://github.com/GeorgDangl/Dangl.Common",
     "owners": [ "Georg Dangl" ],
-    "releaseNotes": "1.3.0: Change StringEncryption to work with any passwords. Not backwards compatible to earlier versions."
+    "releaseNotes": "1.3.1: Allow encryption and decryption of empty string and with empty passwords. Null values will still throw ArgumentNullExceptions\r\n1.3.0: Change StringEncryption to work with any passwords. Not backwards compatible to earlier versions."
   },
-  "version": "1.3.0",
+  "version": "1.3.1",
   "frameworks": {
     "netcoreapp1.0": {
       "imports": [
