--- a/src/Dangl.Common/project.json
+++ b/src/Dangl.Common/project.json
@@ -9,20 +9,11 @@
     "releaseNotes": "1.3.1: Allow encryption and decryption of empty string and with empty passwords. Null values will still throw ArgumentNullExceptions\r\n1.3.0: Change StringEncryption to work with any passwords. Not backwards compatible to earlier versions."
   },
   "version": "1.3.1",
+  "dependencies": {
+    "NETStandard.Library": "1.6.1"
+  },
   "frameworks": {
-    "netcoreapp1.1": {
-      "imports": [
-        "dnxcore50",
-        "portable-net45+win8"
-      ],
-      "dependencies": {
-        "Microsoft.NETCore.App": {
-          "version": "1.1.0",
-          "type": "platform"
-        }
-      }
-    },
-    "net45": {}
+    "netstandard1.3": {}
   },
   "buildOptions": {
     "xmlDoc": true
