--- a/src/Dangl.Common/project.json
+++ b/src/Dangl.Common/project.json
@@ -9,11 +9,13 @@
     "releaseNotes": "1.3.2: Target NETStandard 1.3"
   },
   "version": "1.3.2",
-  "dependencies": {
-    "NETStandard.Library": "1.6.1"
-  },
   "frameworks": {
-    "netstandard1.3": {}
+    "netstandard1.3": {
+      "dependencies": {
+        "NETStandard.Library": "1.6.1"
+      }
+    },
+    "net46": { } 
   },
   "buildOptions": {
     "xmlDoc": true
