Enable full pdb output in debug builds

--- a/test/Dangl.Common.Tests/Dangl.Common.Tests.csproj
+++ b/test/Dangl.Common.Tests/Dangl.Common.Tests.csproj
@@ -12,6 +12,11 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>True</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\Dangl.Common\Dangl.Common.csproj" />
   </ItemGroup>
