--- a/src/Dangl.Common/Dangl.Common.csproj
+++ b/src/Dangl.Common/Dangl.Common.csproj
@@ -2,18 +2,26 @@
 
   <PropertyGroup>
     <Description>Common functionality</Description>
-    <Copyright>(c) 2016 Georg Dangl</Copyright>
+    <Copyright>(c) 2017 Georg Dangl</Copyright>
+    <PackageLicenseUrl>https://github.com/GeorgDangl/Dangl.Common/blob/dev/LICENSE.md</PackageLicenseUrl>
     <AssemblyTitle>Dangl.Common</AssemblyTitle>
-    <Version>1.3.2</Version>
+    <Version>1.4.0</Version>
     <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">True</GeneratePackageOnBuild>
     <Authors>Georg Dangl</Authors>
     <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Dangl.Common</AssemblyName>
     <PackageId>Dangl.Common</PackageId>
-    <PackageReleaseNotes>1.3.2: Target NETStandard 1.3</PackageReleaseNotes>
+    <PackageReleaseNotes>
+      1.4.0:
+      PBKDF2 Iterations in the StringEncryptionExtensions are now configurable
+      
+      1.3.2:
+      Target NETStandard 1.3</PackageReleaseNotes>
     <PackageIconUrl>https://blog.dangl.me/media/1114/gd_icon_256.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/GeorgDangl/Dangl.Common</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/GeorgDangl/Dangl.Common.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <NetStandardImplicitPackageVersion Condition=" '$(TargetFramework)' == 'netstandard1.3' ">1.6.1</NetStandardImplicitPackageVersion>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
@@ -21,6 +29,7 @@
     <RootNamespace>Dangl</RootNamespace>
   </PropertyGroup>
 
+  <!-- This is required for code coverage -->
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
