--- a/src/Dangl.Common/Dangl.Common.csproj
+++ b/src/Dangl.Common/Dangl.Common.csproj
@@ -9,14 +9,17 @@
     <VersionSuffix Condition=" '$(GIT_BRANCH)' == 'origin/dev'">build-$(BUILD_NUMBER)</VersionSuffix>
     <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">True</GeneratePackageOnBuild>
     <Authors>Georg Dangl</Authors>
-    <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Dangl.Common</AssemblyName>
     <PackageId>Dangl.Common</PackageId>
     <PackageReleaseNotes>
+      1.4.1:
+      Downgrade to netstandard1.3 and net45 for broader compatibility
+      
       1.4.0:
       PBKDF2 Iterations in the StringEncryptionExtensions are now configurable
-      
+
       1.3.2:
       Target NETStandard 1.3</PackageReleaseNotes>
     <PackageIconUrl>https://blog.dangl.me/media/1114/gd_icon_256.png</PackageIconUrl>
@@ -35,7 +38,7 @@
     <DebugSymbols>True</DebugSymbols>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
