--- a/src/Dangl.Common/Dangl.Common.csproj
+++ b/src/Dangl.Common/Dangl.Common.csproj
@@ -14,6 +14,9 @@
     <AssemblyName>Dangl.Common</AssemblyName>
     <PackageId>Dangl.Common</PackageId>
     <PackageReleaseNotes>
+      1.4.2:
+      Fix NullReferenceException when adding or removing null items to TrulyObservableCollection
+
       1.4.1:
       Downgrade to netstandard1.3 and net45 for broader compatibility
       
@@ -21,7 +24,8 @@
       PBKDF2 Iterations in the StringEncryptionExtensions are now configurable
 
       1.3.2:
-      Target NETStandard 1.3</PackageReleaseNotes>
+      Target NETStandard 1.3
+    </PackageReleaseNotes>
     <PackageIconUrl>https://blog.dangl.me/media/1114/gd_icon_256.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/GeorgDangl/Dangl.Common</PackageProjectUrl>
     <RepositoryUrl>https://github.com/GeorgDangl/Dangl.Common.git</RepositoryUrl>
