--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="xunit" value="https://www.myget.org/F/xunit/api/v3/index.json" protocolVersion="3" />
+    <add key="NukeMyGet" value="https://www.myget.org/F/nukebuild/api/v3/index.json" protocolVersion="3" />
   </packageSources>
 </configuration>
