--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 [Dd]ebugPublic/
 [Rr]elease/
 x64/
-build/
 bld/
 [Bb]in/
 [Oo]bj/
@@ -198,3 +197,4 @@ generated_docs/**/*
 docs.zip
 
 docs/docfx.console.**/*
+output/
