--- a/test/Dangl.Common.Tests/Dangl.Common.Tests.csproj
+++ b/test/Dangl.Common.Tests/Dangl.Common.Tests.csproj
@@ -12,9 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta1-build3919" />
-    <PackageReference Include="xunit" Version="2.4.0-beta1-build3919" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="xunit" Version="2.4.0" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.4.0-beta1-build3919" />
   </ItemGroup>
 
