--- a/test/Dangl.Common.Tests/Dangl.Common.Tests.csproj
+++ b/test/Dangl.Common.Tests/Dangl.Common.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.2;net47;net461;net46;net452</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.2;netcoreapp2.1;net47;net461;net46;net452</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
