--- a/test/Dangl.Common.Tests/Dangl.Common.Tests.csproj
+++ b/test/Dangl.Common.Tests/Dangl.Common.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netcoreapp3.1;net47;net461;net46;net452</TargetFrameworks>
+    <TargetFrameworks>net6.0;net5.0;netcoreapp3.1;net47;net461;net46;net452</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
